# arena_mcp

./: .gitignore  Cargo.toml  README.md  justfile
app/: Cargo.toml  justfile
app/protocol/: Cargo.toml
app/protocol/src/: lib.rs
app/site/: Cargo.toml  package-lock.json  package.json
app/site/public/: output.css
app/site/src/: arena.rs  browse.rs  chat.rs  lib.rs  login.rs  logs.rs  main.rs  settings.rs  state.rs
app/src/: main.rs
src/: client.rs  lib.rs  main.rs  server.rs  types.rs
