[package]
name = "arena"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[lib]
name = "arena"
path = "src/lib.rs"

[[bin]]
name = "arena"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
