[workspace]
resolver = "2"
members = [".", "site", "protocol"]

[package]
name = "arena-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false

[[bin]]
name = "arena-app"
path = "src/main.rs"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nightshade = { version = "0.8.0", default-features = false, features = [
    "runtime",
    "wgpu",
    "egui",
    "webview",
    "claude",
    "tracing",
] }
include_dir = "0.7"
serde_json = "1.0"
arena_app_protocol = { path = "protocol" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
