[package]
name = "arena-app-site"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
arena_app_protocol = { path = "../protocol" }
nightshade = { version = "0.8.0", default-features = false, features = [
    "webview",
] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "HtmlElement",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "Event",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "Storage",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-channel = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
