[package]
name = "arena-app-site"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
arena_app_protocol = { path = "../protocol" }
console_error_panic_hook = "0.1"
console_log = "1"
futures-channel = "0.3"
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr", "nightly"] }
log = "0.4"
nightshade = { version = "0.8.2", default-features = false, features = [
    "webview",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Event",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "Storage",
    "Url",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
